# chatbot-assistant

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  cloudbuild.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
.planning/: PROJECT.md
app/: config.py  dependencies.py  logging_config.py  main.py
app/db/: engine.py  models.py  session.py
app/middleware/: api_key.py
app/routers/: admin.py  chat.py  health.py  tasks.py  webhooks.py
app/schemas/: admin.py  chat.py  health.py  tasks.py  webhooks.py
app/services/: chunker.py  denylist.py  gemini_client.py  github_client.py  indexer.py  repo_manager.py  retrieval.py  task_queue.py
docs/: DEPLOYMENT.md  FRD.md  TECHNICAL_DESIGN.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py
scripts/: deploy.sh  setup-gcp.sh  start.sh
tests/: conftest.py  test_admin.py  test_chat_router.py  test_chunker.py  test_denylist.py  test_dependencies.py  test_edge_cases.py  test_gemini_client.py  test_github_client.py  test_hardening.py  test_health.py  test_indexer.py  test_integration.py  test_models.py  test_repo_manager.py  test_retrieval.py  test_task_queue.py  test_tasks_router.py  test_webhooks.py
